# summer-dreams-ota

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Caddyfile  GEMINI.md  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .geminiignore  Development Rulebook.md  Dockerfile  GEMINI.md  README.md  db.sqlite3  entrypoint.sh  pyproject.toml
backend/.gemini/: settings.json
backend/.gemini/hooks/: ruff_fix.py
backend/conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
backend/conductor/archive/landing_page_api_20260509/: metadata.json
backend/conductor/tracks/landing_page_api_20260509/: index.md  plan.md  spec.md
backend/core/: settings.py  urls.py  urls_v1.py
backend/summer_dreams_ota/authentication/: apps.py  errors.py  serializers.py  services.py  urls.py  views.py
backend/summer_dreams_ota/marketing/: admin.py  apps.py  errors.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/summer_dreams_ota/marketing/management/commands/: seed_marketing_data.py
backend/summer_dreams_ota/marketing/migrations/: 0001_initial.py  0002_contactinquiry.py
backend/summer_dreams_ota/shared/: apps.py  models.py
backend/summer_dreams_ota/shared/errors/: __init__.py  base.py  constants.py  exception_handler.py  not_found_error.py  serializer_error.py  validation_error.py
backend/summer_dreams_ota/telegram/: admin.py  apps.py  errors.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/summer_dreams_ota/telegram/migrations/: 0001_initial.py
backend/summer_dreams_ota/users/: admin.py  apps.py  models.py
backend/summer_dreams_ota/users/migrations/: 0001_initial.py  0002_alter_user_options.py
backend/templates/admin/: base_site.html
conductor/: ci-cd-pipeline.md
docs/: Requirement Analysis.md
frontend/: .dockerignore  .env.example  Dockerfile  GEMINI.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
frontend/conductor/archive/contact_page_20260509/: index.md  plan.md
frontend/conductor/archive/landing_page_20260501/: spec.md
frontend/conductor/archive/telegram_chat_20260508/: metadata.json
frontend/conductor/archive/telegram_privacy_20260508/: spec.md
frontend/conductor/tracks/contact_page_20260509/: metadata.json  plan.md  spec.md
frontend/conductor/tracks/landing_page_20260501/: index.md  metadata.json  plan.md
frontend/messages/: en.json  es.json
frontend/src/: auth.ts  proxy.ts
frontend/src/lib/: api-client.ts  constants.ts  session.ts
frontend/src/providers/: query-provider.tsx
frontend/src/types/: index.ts
(+45 files in other folders)
